# pdm

./: .gitignore  package-lock.json  package.json  tsconfig.json
api/: api.py  credentials.py  pyproject.toml
public/: index.html
src/: App.test.tsx  index.css  index.tsx
src/api/: api.py  credentials.py  pyproject.toml
src/express_api/: app.js  index.ts  package-lock.json  package.json
src/express_api/routes/: email.ts  testApi.js
src/frontend/: App.css  App.tsx
src/frontend/components/: .contact_modal.tsx.swp  clients_page.tsx  contact_modal.tsx  contact_us_button.tsx  employee_background_index.tsx  employee_section.tsx  header_typing.tsx  login_button.tsx  nav_bar.tsx  team.tsx
src/frontend/components/header/: header_typing.tsx  main_page_header.tsx  typed_header.tsx
src/frontend/components/images/: imageIndex.js
src/frontend/css/: main.css
src/frontend/pages/: MainPage.tsx  clients_page.tsx  home_page.tsx  main_page.tsx  team_page.tsx
